		Windows-specific changes to R
		=============================

See the file NEWS for changes that affect all versions of R.


rw1060
======

Support for bzip-ed connections has been added.


rw1051
======

file.rename() (which is by default used when saving workspaces) now
uses Windows API rather than ISO C functions.  This works around a
reported problem with Windows thinking a file was in use, and on
NT/2000/XP machines makes renaming an atomic operation (rather than
delete followed by move).

Bulding the standalone Rmath.dll was not making the import library
libRmath.a.

We may have been able to track down (to the isprint routine) the cause
of the FAQ Q2.14 about crashes caused be non-ASCII characters, and
hence to circumvent it.

File | Print on the menu of a windows() graphics device was not working.

The binary distribution could not make packages which needed to link
to Rblas.dll



rw1050
======

There are few new Windows-specific features in this release: it has
been tuned to work better with Windows XP and a number of workarounds
added.


win.print() allows a printer to be specified.

help.start(browser=) is now supported: this may be useful if the
default browser does not support the Java-based search engine.

Very small circles are now forced to be visible: not all Windows
versions would display them.

Transparency in png() is now supported on `High Color' (16-bit) screens.

Changing plot resize type via the menu now works better for the current
plot (which is immediately redrawn).

BLAS support is now in a separate DLL, Rblas.dll.  This means that
packages using BLAS (KernSmooth, Matrix, bqtl, fracdiff, gss,
odesolve, quadprog, quantreg and subselect amongst those on CRAN) need
to be re-built.  The advantage is that less space is taken up overall,
and ATLAS can be used just by rebuilding Rblas.dll.

The installers now use bzip2 compression, so make smaller packages.

Cross-building automatically uses STAMP=NO for packages.
