@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta name="generator" content=
-"HTML Tidy for Solaris (vers 1st April 2002), see www.w3.org">
+"HTML Tidy for Linux/x86 (vers 1st April 2002), see www.w3.org">
 <title>R for Windows FAQ</title>
 <meta http-equiv="Content-Type" content="text/html">
 <meta name="description" content="R for Windows FAQ">
@@ -246,7 +246,7 @@ of the distribution.</p>
 installation.</p>
 
 <p>2) Directory <code>miniR</code> contains <code>miniR.exe</code>
-and seven files <code>miniR-?.bin</code>. You can put
+and eight files <code>miniR-?.bin</code>. You can put
 <code>miniR.exe</code> and <code>miniR-1.bin</code> on one floppy
 and the remaining <code>miniR-?.bin</code> on a floppy each.</p>
 
