@@ -28,9 +28,9 @@ installer.  It contains all the R components, and you can select what
 want installed.
 
 
-2) Files miniR.exe and miniR-1.bin to miniR-7.bin.  If you need to,
+2) Files miniR.exe and miniR-1.bin to miniR-8.bin.  If you need to,
 put miniR.exe and miniR-1.bin on one floppy, and miniR-2.bin to
-miniR-7.bin on separate floppies.
+miniR-8.bin on separate floppies.
 
 This is a small installation, containing text and compiled HTML help
 and the Introduction to R and Data Import/Export manuals in PDF.
