@@ -116,7 +116,7 @@ the distribution.
 
 1) @code{SetupR.exe} is about 18Mb and gives a complete installation.
 
-2) Directory @code{miniR} contains @code{miniR.exe} and seven files
+2) Directory @code{miniR} contains @code{miniR.exe} and eight files
 @code{miniR-?.bin}.  You can put  @code{miniR.exe} and @code{miniR-1.bin}
 on one floppy and the remaining @code{miniR-?.bin} on a floppy each.
 
